<resources>
    <string name="app_name">MyCookbookMobile</string>
    <string name="show_recipe">Show recipe</string>
    <string name="calories">Calories: %1$d kcal</string>
    <string name="carbs">Carbs: %1$d g</string>
    <string name="proteins">Proteins: %1$d g</string>
    <string name="fat">Fat: %1$d g</string>
    <string name="back_button">Back</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="search">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_hint">Dish name</string>
</resources>