<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".fragments.DishFragment">

    <LinearLayout
        android:id="@+id/dish_linearlayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/dish_image"
            android:layout_width="wrap_content"
            android:layout_height="175dp"
            android:adjustViewBounds="true"
            app:shapeAppearanceOverlay="@style/rounded_image" />

        <TextView
            android:id="@+id/dish_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/antic_slab"
            android:textAlignment="center"
            android:text="ANYTHING"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/dish_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/antic_slab"
            android:textSize="16sp"
            android:textAlignment="center"/>

        <Button
            android:id="@+id/recipe_button"
            android:text="@string/show_recipe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:backgroundTint="@color/elements_color"
            android:textColor="@color/black"
            android:onClick="showRecipe"/>

    </LinearLayout>

    <GridLayout
        android:id="@+id/nutrition_gridlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/dish_linearlayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.2"
        android:columnCount="1"
        android:rowCount="2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/calories_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calories"
                android:textSize="20sp"
                android:layout_row="0"
                android:layout_column="1"
                style="@style/nutrition"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/carbs_view"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/carbs_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/carbs"
                android:textSize="20sp"
                android:layout_row="0"
                android:layout_column="3"
                style="@style/nutrition"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/calories_view"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp">


            <TextView
                android:id="@+id/proteins_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/proteins"
                android:textSize="20sp"
                android:layout_row="1"
                android:layout_column="1"
                style="@style/nutrition"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/fat_view"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <TextView
                android:id="@+id/fat_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fat"
                android:textSize="20sp"
                android:layout_gravity="right"
                android:layout_row="1"
                android:layout_column="3"
                style="@style/nutrition"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/proteins_view"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </GridLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/nutrition_gridlayout"
        app:layout_constraintLeft_toLeftOf="parent">

        <Button
            android:id="@+id/previous_button"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/previous"
            android:textColor="@color/black"
            android:backgroundTint="@color/elements_color"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/next_button"
            android:onClick="previousRecipe"/>

        <Button
            android:id="@+id/next_button"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:textColor="@color/black"
            android:backgroundTint="@color/elements_color"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/previous_button"
            app:layout_constraintRight_toRightOf="parent"
            android:onClick="nextRecipe"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>